--- a/works.css
+++ b/works.css
@@ -216,6 +216,7 @@ html, body {
     display: flex;
     align-items: center;
     gap: 5px;
+    top: 4px;
 }
 .dropdown-indicator {
     font-size: 10px;
